test/should_pass/basic_053.grg
actions basic_053 using basic_model_001;

rule r {
	pattern {
		x : A;
		y : B;
		z : C;
	}
	replace {
		c : C;
	}
}

