test/should_fail/inh_attrib_009.grg
actions inh_attrib_009 using inh_attrib_model_009;

rule r {
	pattern {
	}
	replace {
	}
}

